feat: product and brand entity

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
-DB_PASSWORD=
-DB_NAME=
-DB_HOST=
+DB_PASSWORD=yournicepassword
+DB_NAME=itcrowd_products
+DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
