--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,7 @@ DB_NAME=itcrowd_products
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
+CLOUDINARY_NAME=CloudinaryUserName
+CLOUDINARY_APIKEY=CloudinaryApiKey
+CLOUDINARY_APISECRET=CloudinaryApiSecret
+JWT_SECRET=ARandomSecretValue
