--- a/backend/package.json
+++ b/backend/package.json
@@ -74,7 +74,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "m:gen": "export NODE_ENV=production && num run orm:init migration:generate",
+    "m:gen": "export NODE_ENV=production && npm run orm:init migration:generate",
     "m:run": "export NODE_ENV=production && npm run orm:init migration:run",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
