add start script in frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "build": "tsc && vite build",
     "dev": "vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "type": "module",
   "version": "0.0.0"
